<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/currencyNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="Value Currency"
        android:textColor="@color/toastBackground"
        android:textSize="18sp"
        android:tooltipText="@string/valCurToolTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/currencySpinner"
        style="@style/mySpinnerItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:entries="@array/currencySymbols"
        app:layout_constraintStart_toEndOf="@+id/currencyNameTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/refreshTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Auto Refresh Interval"
        android:textColor="@color/toastBackground"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:tooltipText="@string/refreshToolTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyNameTextView" />

    <Spinner
        android:id="@+id/refreshSpinner"
        style="@style/mySpinnerItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:entries="@array/refreshTimeIntervals"
        app:layout_constraintStart_toEndOf="@+id/refreshTimeTextView"
        app:layout_constraintTop_toBottomOf="@+id/currencySpinner"/>


    <TextView
        android:id="@+id/enableNotificationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Ongoing Notification"
        android:textColor="@color/toastBackground"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:tooltipText="@string/notificationToolTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refreshTimeTextView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toEndOf="@+id/enableNotificationTextView"
        app:layout_constraintTop_toBottomOf="@+id/refreshSpinner"
        android:theme="@style/SCBSwitch"/>

    <TextView
        android:id="@+id/enablePIPTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Picture-in-Picture"
        android:textColor="@color/toastBackground"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:tooltipText="@string/pipToolTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enableNotificationTextView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/pipSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toEndOf="@+id/enablePIPTextView"
        app:layout_constraintTop_toBottomOf="@+id/notificationSwitch"
        android:theme="@style/SCBSwitch"/>

    <Button
        android:id="@+id/apiTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Test API Connection"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enablePIPTextView" />

    <Button
        android:id="@+id/requestFeatureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Request Feature"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apiTestButton" />

    <!-- Footer: -->

    <TextView
        android:id="@+id/toolTipTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        android:text="@string/settingsHelp"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="11sp"
        android:paddingTop="4dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        layout="@layout/item_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>